--- a/menu.html
+++ b/menu.html
@@ -17,42 +17,42 @@
         <h1>Menú</h1>
     </div>
     <section>
-        <article class="card" style="background-image: url('img/img1.jpg');">
+        <article class="card" style="background-image: url('resources/panucho.png');">
             <div>
                 <h4>ENTRADAS</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img2.jpg');">
+        <article class="card" style="background-image: url('resources/davide-cantelli-jpkfc5_d-DI-unsplash.jpg');">
             <div>
                 <h4>ENSALADAS</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img3.jpg');">
+        <article class="card" style="background-image: url('resources/cochinita.webp');">
             <div>
                 <h4>CONTEMPORÁNEO</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img4.jpg');">
+        <article class="card" style="background-image: url('resources/Cochinita-Pibil.jpg');">
             <div>
                 <h4>PREHISPÁNICO</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img5.jpg');">
+        <article class="card" style="background-image: url('resources/pescado-tikinxic-coba.webp');">
             <div>
                 <h4>EXÓTICO</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img6.jpg');">
+        <article class="card" style="background-image: url('resources/mojito.png');">
             <div>
                 <h4>COCTELERÍA</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img7.jpg');">
+        <article class="card" style="background-image: url('resources/cerveza.png');">
             <div>
                 <h4>BEBIDAS</h4>
             </div>
         </article>
-        <article class="card" style="background-image: url('img/img8.jpg');">
+        <article class="card" style="background-image: url('resources/pay1.png');">
             <div>
                 <h4>POSTRES</h4>
             </div>
