--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cuncunul</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="cero.ico" type="image/x-icon" />
+    <link rel="icon" href="resources/cero.ico" type="image/x-icon" />
 
     <!-- W3.CSS -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -22,8 +22,10 @@
     <!-- Header -->
     <div class="w3-top" id="navbar">
         <div class="w3-bar w3-padding w3-card">
-            <a href="#home" class="w3-bar-item w3-button"
-                style='font-family: kurale, serif; font-size: larger;'>Cuncunul</a>
+            <a href="index.html" class="w3-bar-item w3-button logo-container">
+                <img src="resources/cero.ico" alt="Logo Cuncunul" class="header-logo">
+                <span style='font-family: kurale, serif; font-size: larger;'>Cuncunul</span>
+            </a>
             <div class="w3-right w3-hide-small">
                 <a href="#about" class="w3-bar-item w3-button" onclick="scrollToSection(event, 'about')">Sobre nosotros</a>
                 <a href="menu.html" class="w3-bar-item w3-button">Menú</a>
@@ -50,8 +52,15 @@
     <div class="sobre-nosotros" id="about">
         <div class="sobre-nosotros-contenido">
             <h2>Sobre nosotros</h2>
-            <p>Somos un restaurante dedicado a ofrecer la mejor experiencia culinaria, con platos tradicionales y un
-                toque moderno. Nuestro compromiso es brindar un servicio excepcional en un ambiente acogedor.</p>
+            <div class="about-flex-container">
+                <div class="about-text">
+                    <p>Cuncunul nace como un homenaje a la rica tradición culinaria de la península de Yucatán, fusionando recetas ancestrales con técnicas contemporáneas. Nos enorgullece ofrecer una experiencia gastronómica auténtica que celebra los sabores, aromas y texturas característicos de esta región.</p>
+                    <p>En Cuncunul, no solo servimos comida; creamos momentos memorables en un ambiente acogedor y elegante, donde cada detalle ha sido cuidadosamente pensado para transportarte a un viaje sensorial por la rica cultura maya y yucateca.</p>
+                </div>
+                <div class="about-images">
+                    <img src="resources/photo-1532635211-8ec15f2ce05c.avif" alt="Ingredientes frescos" class="about-img">
+                </div>
+            </div>
         </div>
     </div>
 
@@ -61,27 +70,38 @@
     <!-- Contacto -->
     <div class="contacto" id="contact">
         <div class="contacto-contenido">
-            <div class="columna">
-                <h2>Contacto</h2>
-                <p>Teléfono: +52 123 456 7890</p>
-                <p>Email: contacto@cuncunul.com</p>
-                <p>Email: reservas@cuncunul.com</p>
-            </div>
-            <div class="columna">
+            <div class="columna mapa">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.1234567890!2d-99.1234567890!3d19.1234567890!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1234567890abcdef!2sCuncunul!5e0!3m2!1ses!2smx!4v1234567890"
-                    width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="columna info">
+                <h2>Contacto</h2>
+                <div class="contact-details">
+                    <div class="contact-item">
+                        <span class="contact-icon">📞</span>
+                        <p>+52 123 456 7890</p>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">✉️</span>
+                        <p>contacto@cuncunul.com</p>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📅</span>
+                        <p>reservas@cuncunul.com</p>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">🕒</span>
+                        <p>Lunes a Domingo: 13:00 - 23:00</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>Hecho por:</p>
-        <ul>
-            <li>Chavez Hernandez Sandra</li>
-            <li>Ibarrola Origel Andres Daniel</li>
-        </ul>
+                <img src="resources/cero.ico" alt="Logo Cuncunul" class="header-logo">
     </footer>
 
 </body>
