actualizo index y about

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>En Cuncunul, no solo servimos comida; creamos momentos memorables en un ambiente acogedor y elegante, donde cada detalle ha sido cuidadosamente pensado para transportarte a un viaje sensorial por la rica cultura maya y yucateca.</p>
                 </div>
                 <div class="about-images">
-                    <img src="resources/photo-1532635211-8ec15f2ce05c.avif" alt="Ingredientes frescos" class="about-img">
+                    <img src="resources/aboutus.jpg" alt="Ingredientes frescos" class="about-img">
                 </div>
             </div>
         </div>
