--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="resources/cero.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="chat.css" />
 
     <!-- W3.CSS -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -151,9 +152,8 @@
       <img src="resources/cero.ico" alt="Logo Cuncunul" class="header-logo" />
     </footer>
 
-    <div data-key="AI Sales Chatbot" class="ft" id="ftmvu59kw"></div>
-    <script src="https://wdg.fouita.com/widgets/0x248ce6.js"></script>
-    
+    <script src="chat.js"></script>
+
   </body>
 
   <script>
