--- a/login.html
+++ b/login.html
@@ -128,6 +128,16 @@
           />
         </div>
         <div class="form-group">
+          <label for="reg-telefono">Teléfono de Contacto</label>
+          <input
+            type="tel"
+            id="reg-telefono"
+            name="telefono"
+            class="form-control"
+            required
+          />
+        </div>
+        <div class="form-group">
           <label for="reg-password">Contraseña</label>
           <input
             type="password"
@@ -147,6 +157,9 @@
             required
           />
         </div>
+        <p style="color: #e3ba7e; font-size: 0.85rem; margin-top: -10px; margin-bottom: 15px; text-align: center;">
+          Después de registrarte, recibirás un código de verificación que deberás ingresar para activar tu cuenta.
+        </p>
         <button type="submit" class="btn">Registrarse</button>
 
         <div class="register-link">
@@ -289,6 +302,7 @@
 
           const name = document.getElementById("reg-name").value;
           const email = document.getElementById("reg-email").value;
+          const telefono = document.getElementById("reg-telefono").value;
           const password = document.getElementById("reg-password").value;
           const confirmPassword = document.getElementById("reg-confirm").value;
 
@@ -321,11 +335,17 @@
                 const response = JSON.parse(xhr.responseText);
 
                 if (response.success) {
-                  showNotification(response.message, "success");
+                  // Mostrar el código en un mensaje específico
+                  let mensaje = response.message;
+                  if (response.codigo) {
+                    mensaje = `Registro exitoso. Anota tu código de verificación: ${response.codigo}`;
+                  }
+                  showNotification(mensaje, "success");
+                  
                   // Redireccionar después de un breve retraso
                   setTimeout(function () {
                     window.location.href = response.redirect;
-                  }, 1000);
+                  }, 3000); // Dar más tiempo para ver el código
                 } else {
                   showNotification(response.message, "error");
                 }
@@ -356,6 +376,8 @@
             encodeURIComponent(name) +
             "&email=" +
             encodeURIComponent(email) +
+            "&telefono=" +
+            encodeURIComponent(telefono) +
             "&password=" +
             encodeURIComponent(password) +
             "&confirm_password=" +
